--- a/Project1.Web/Content/Site.css
+++ b/Project1.Web/Content/Site.css
@@ -322,3 +322,23 @@ div#title {
 .tri-state {
     width: 6em;
 }
+
+
+
+/*------------------*/
+.MeekEditLink  a {
+  padding: 2px 4px 3px;
+  font-size: 11.049999999999999px;
+  font-weight: bold;
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #f00;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.MeekEditLink a:hover {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #f55;
+}
