handle null user better (good for when database is wiped!)

--- a/Project1.Web/Views/Shared/_LogOnPartial.cshtml
+++ b/Project1.Web/Views/Shared/_LogOnPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@if (Request.IsAuthenticated)
+﻿@if (Project1.Core.Domain.User.Current != null)
 {
     <li>@Html.ActionLink(Project1.Core.Domain.User.Current.Email, "Index", "Account", new { Area = "" }, null)</li>
     if (Project1.Core.Domain.User.Current.IsAdmin)
