--- a/Project1.Web/Views/Shared/_Layout.cshtml
+++ b/Project1.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
     <script src="/Scripts/Noodles/Noodles.js"></script>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    @MvcMiniProfiler.MiniProfiler.RenderIncludes() 
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
