--- a/Project1.Web/Views/Admin/Index.cshtml
+++ b/Project1.Web/Views/Admin/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@using Project1.Core.Helpers
+@{
     ViewBag.Title = "Admin";
 }
 <h2>@ViewBag.Title</h2>
 <ul>
     <li>@Html.AdminActionLink("Elmah", "Elmah")</li>
     <li>@Html.AdminActionLink("Manage users", "ManageUsers")</li>
+    <li>@Html.AdminActionLink("SystemTime.Now: " + SystemTime.Now, "Settings", "SystemTime")</li>
     <li><a href="/meek/list/">CMS</a></li>
 </ul>
