noodles/harden Allow rules

--- a/Project1.Web/Areas/Admin/Views/ManageUsers/Index.cshtml
+++ b/Project1.Web/Areas/Admin/Views/ManageUsers/Index.cshtml
@@ -49,7 +49,7 @@
                 </td>
                 <td>@user.IsContentAdmin
                 </td>
-                <td>@NoodlesHelper.NodeMethodsDropdown(user)
+                <td>@NoodlesHelper.NodeMethodsDropdown(user, "btn-mini")
                 </td>
             </tr>
         }
