--- a/Project1.Web/Views/Account/LogOn.cshtml
+++ b/Project1.Web/Views/Account/LogOn.cshtml
@@ -1,49 +1,18 @@
-﻿@model Project1.Web.Models.LogOnModel
+﻿@using Project1.Web.Controllers
+@using Project1.Web.Models
 
 @{
     ViewBag.Title = "Log On";
 }
 
-<h2>Log On</h2>
+<h2>
+    @(ViewBag.Title)</h2>
 <p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
+    Please enter your user name and password. @Html.ActionLink("Register", "Register")
+    if you don't have an account.
 </p>
-
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
-
-@using (Html.BeginForm()) {
-    <div>
-        <fieldset>
-            <legend>Account Information</legend>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Email)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Email)
-                @Html.ValidationMessageFor(m => m.Email)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Password)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
-            </div>
-
-            <p>
-                <input type="submit" value="Log On" />
-            </p>
-        </fieldset>
-    </div>
+@using (var form = Html.FormForAction((AccountController ctlr, LogOnModel model, string r) => ctlr.LogOn(model, r)))
+{
+    form.Render();
 }
 <p>@Html.ActionLink("Forgotten password?", "RequestPasswordReset")</p>
