--- a/Project1.Web/Views/Account/Register.cshtml
+++ b/Project1.Web/Views/Account/Register.cshtml
@@ -1,50 +1,16 @@
-﻿@model Project1.Web.Models.RegisterModel
+﻿@using Project1.Web.Controllers
+@using Project1.Web.Models
 
 @{
     ViewBag.Title = "Register";
 }
 
-<h2>Create a New Account</h2>
+<h2>@(ViewBag.Title)</h2>
 <p>
     Use the form below to create a new account. 
 </p>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
-    <div>
-        <fieldset>
-            <legend>Account Information</legend>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Email)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Email)
-                @Html.ValidationMessageFor(m => m.Email)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Password)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.ConfirmPassword)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.ConfirmPassword)
-                @Html.ValidationMessageFor(m => m.ConfirmPassword)
-            </div>
-
-            <p>
-                <input type="submit" value="Register" />
-            </p>
-        </fieldset>
-    </div>
+@using(var form = Html.FormForAction((AccountController ctlr, RegisterModel model) => ctlr.Register(model)))
+{
+    form.Render();
 }
