--- a/Project1.Web/Views/Shared/FormFactory/Form.Property.cshtml
+++ b/Project1.Web/Views/Shared/FormFactory/Form.Property.cshtml
@@ -5,25 +5,16 @@
     var dataAttributes = Model.GetCustomAttributes().OfType<DataTypeAttribute>();
     if (dataAttributes.Any(da => da.CustomDataType == "Hidden"))
     {
-    <input name="@Model.Name" type="hidden" value="@Model.Value" />
+<input name="@Model.Name" type="hidden" value="@Model.Value" />
     }
     else
     {
-
-        if (ViewData[Model.Name] != null)
-        {
-    <input type="hidden" name="@Model.Name" value="@ViewData[Model.Name]"/>
-        }
-        else
-        {
-            if (ViewBag.Inline ?? false)
-            {
-                Html.RenderPartial("FormFactory/Form.Property.Inline", Model, ViewData);
-            }
-            else
-            {
-                Html.RenderPartial("FormFactory/Form.Property.Block", Model, ViewData);
-            }
-        }
+<div class="control-group @(Html.HasErrors(Model.Name) ? "error" : "")">
+   <label class="control-label "for="@Model.Id">@Model.DisplayName</label>
+   <div class="controls @(Html.HasErrors(Model.Name) ? "error" : "")">
+       @Html.BestProperty(Model)
+       <span class="help-inline">@Html.AllValidationMessages(Model.Name)</span>
+   </div>
+</div>
     }
 }
